@@ -126,6 +126,8 @@ remapJar {
 }
 tasks.withType(JavaCompile).configureEach {
     options.compilerArgs.add('--enable-preview')
+    options.compilerArgs += "--add-modules"
+    options.compilerArgs += "jdk.incubator.vector"
     options.release.set(21)
 }
 
